refactor: replace deprecated URL with URI